--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<DOCTYPE! html>
 <html>
 	<head>
 	</head>
 	</body>
 		<h1> Good Game </h1>
-		<p> hello my friend haha</p>
+		<p></p>
 	</body>
 
 </html>
